src/style/_servers.scss
.servers
{
    .servers__control
    {
      display: block;
      margin-top: 2em;
    }

     > label
    {
        margin-top: 0;

        .sui-dropdown
        {
            min-width: 13em;
            max-width: 100%;
            z-index: 10;
        }
    }

    label > span {
      display: block;
      margin-bottom: .5em;
      text-transform: capitalize;
    }

    h4.message {
      padding-bottom: 2em;
    }

    .servers__computed-url {
      margin-top: 2em;

      span:first-child {
        display: block;
        @include light_text($size: $sm-text-font-size);
      }

      code {
        display: block;
        padding: .25rem 0;
        @include mono_text($size: $sm-text-font-size, $color: $color-primary );
      }
    }
}
// Feel like this belongs in opblock SASS
// Leaving it here for the moment.
.operation-servers {
  h4.message {
    margin-bottom: 2em;
  }
}

